Replace item-note with item-note1 for consistency

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     .item-desc{color:var(--muted); margin:6px 0 10px;}
     .item-price{color:var(--gold); font-size:20px; font-weight:800;}
     .item-note{color:var(--muted); font-size:13px;}
-
+    .item-note1{color:var(--gold); font-size:20px; font-weight:800;}
+      
     /* CTA */
     .cta{text-align:center; padding:20px 0 40px;}
     .btn{
@@ -172,7 +173,7 @@
         <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente. </p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
         <p class="item-note">Valores variam conforme medidas, materiais e acabamentos. Revestimento e Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -184,7 +185,7 @@
         <p class="item-desc">Construção tradicional em tijolinho à vista com arco redondo.</p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -196,7 +197,7 @@
         <p class="item-desc">Conjunto compacto e funcional, acabamento em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -208,7 +209,7 @@
         <p class="item-desc">Projeto robusto completo em tijolinho terracota.</p>
         <p class="item-price">Preço médio: R$ 12.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -220,7 +221,7 @@
         <p class="item-desc">Churrasqueira, fogão e forno iglu — ideal para pizzas.</p>
         <p class="item-price">Preço médio: R$ 13.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -232,7 +233,7 @@
         <p class="item-desc">Churrasqueira, fogão, forno quadrado e forno de pizza.</p>
         <p class="item-price">Preço médio: R$ 18.000,00</p>
         <p class="item-note">Acabamento premium e projeto completo.Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -244,7 +245,7 @@
         <p class="item-desc">Execução sob medida de acordo com suas escolhas.</p>
         <p class="item-price">Preço médio: R$ 7.000,00</p>
         <p class="item-note">Somente mão de obra.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -256,7 +257,7 @@
         <p class="item-desc">Modelo moderno com revestimento à escolha do cliente.</p>
         <p class="item-price">Preço médio: R$ 7.000,00</p>
         <p class="item-note">Somente mão de obra.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -268,7 +269,7 @@
         <p class="item-desc">Estrutura clássica em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -280,7 +281,7 @@
         <p class="item-desc">Churrasqueira + fogão a lenha em L para espaços compactos.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+        <p class="item-note1">**Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
       
